--- a/app/static/index.html
+++ b/app/static/index.html
@@ -8,6 +8,7 @@
 
     <!-- Markdown -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.2.6/dist/purify.min.js"></script>
 
     <!-- Code highlight -->
     <link rel="stylesheet"
@@ -22,7 +23,7 @@
     <div class="sidebar">
         <div class="logo">AI Assistant</div>
 
-        <button class="new-chat" onclick="newChat()">+ Новый диалог</button>
+        <button class="new-chat">+ Новый диалог</button>
 
         <div class="history" id="history"></div>
     </div>
