--- a/app/static/index.html
+++ b/app/static/index.html
@@ -73,6 +73,25 @@
 
     </main>
 
+    <!-- Sources Panel -->
+    <aside class="sources-panel" id="sourcesPanel">
+        <button class="sources-toggle" id="sourcesToggle" aria-label="Переключить панель источников">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+            </svg>
+        </button>
+        
+        <div class="sources-header">
+            <h2>Источники</h2>
+            <span class="sources-count" id="sourcesCount">0</span>
+        </div>
+        
+        <div class="sources-list" id="sourcesList">
+            <!-- Source fragments will be inserted here -->
+        </div>
+    </aside>
+
 </div>
 
 <script src="/static/script.js"></script>
